--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,7 +8,35 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// FontAwesome
+$fa-font-path: "~font-awesome/fonts";
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+@import "node_modules/font-awesome/scss/font-awesome";
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+/** class error message **/
+.has-error .form-control{
+  border-color: #a94442;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+
+.has-error .control-label{
+  color: #a94442;
+}
+
+//maxlength
+.input-group-addon{
+  width: 40px;
+  background-color: #bc3e3e;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 1px;
+  padding-top: 4px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
