--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -28,7 +28,7 @@ $fa-font-path: "~font-awesome/fonts";
   color: #a94442;
 }
 
-//maxlength
+/** maxlenght **/
 .input-group-addon{
   width: 40px;
   background-color: #bc3e3e;
@@ -38,4 +38,23 @@ $fa-font-path: "~font-awesome/fonts";
   padding-top: 4px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+}
+
+/** fieldset **/
+fieldset.scheduler-border {
+  border: 1px groove #ddd !important;
+  border-radius: 5px;
+  padding: 0 1.4em 1.4em 1.4em !important;
+  margin: 0 0 1.5em 0 !important;
+  -webkit-box-shadow:  0px 0px 0px 0px #000;
+  box-shadow:  0px 0px 0px 0px #000;
+}
+
+legend.scheduler-border {
+  font-size: 1.2em !important;
+  font-weight: bold !important;
+  text-align: left !important;
+  width:auto;
+  padding:0 10px;
+  border-bottom:none;
 }
