--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,3 @@
-
 // Body
 $body-bg: #f8fafc;
 
@@ -18,3 +17,8 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$dark: #343A40;
+
+$custom-file-text: (
+br: "Navegar",
+);
