--- a/resources/assets/sass/website.scss
+++ b/resources/assets/sass/website.scss
@@ -107,3 +107,19 @@
 .servicos3 {
   background: rgb(86, 161, 192);
 }
+
+.giz_background {
+    background: rgb(242, 242, 242);
+  }
+
+  .giz_titulo {
+    font-family: Helvetica, Arial;
+    font-size: 1.3rem;
+    line-height: 1.4em;
+  }
+
+  .giz_corpo {
+    font-family: Helvetica, Arial;
+    font-size: 1.1rem;
+    line-height: 1.4em;
+  }
